<resources>
    <string name="app_name">Project21</string>
    <string name="prompt_email">E-Mail</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Anmelden</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Willkommen !"</string>
    <string name="invalid_username">Kein gültiger Benutzername!</string>
    <string name="invalid_password">Passwort zu kurz!</string>
    <string name="login_failed">"Fehler beim Anmelden"</string>
    <string name="version">Version: Pre-Alpha</string>
    <string name="logo">Logo</string>
    <string name="forgotten_password">Passwort vergessen?</string>
    <string name="stay_signed_in">Angemeldet bleiben</string>
    <string name="guest_login">Als Gast anmelden</string>
    <string name="dummy_login">v.nachname@21er.at</string>
    <string name="dummy_password">********</string>
    <string name="incorrect_data">Ungültige Anmeldedaten!</string>
    <string name="password_reset">Passwort zurücksetzen</string>
    <string name="reset_ID">Identifikationsnummer</string>
    <string name="reset_continue">Weiter</string>
    <string name="reset_password_new">Neues Passwort</string>
    <string name="reset_password_again">Neues Passwort wiederholen</string>
    <string name="incorrect_id">Ungültige Identifkationsnummer</string>
    <string name="try_again_delay">Versuchen Sie es in einigen Minuten erneut.</string>
    <string name="search">Suche</string>
    <string name="profile">Profil</string>
    <string name="settings">Einstellungen</string>
    <string name="home_button">Button</string>
    <string name="news_screen">news</string>
    <string name="radiobutton">RadioButton</string>

</resources>